# evolution-security-classifier

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  org.gnome.evolution.plugin.security-classifier.gschema.xml.in
po/: POTFILES.in
src/: Makefile.am  org-gnome-evolution-security-classifier.eplug.xml  org-gnome-evolution-security-classifier.error.xml  security-classifier.c
